# bergamot_translator

./: .gitmodules  .pubignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: publish.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/bergamot_translator_example/: MainActivity.kt
example/ios/: .gitignore
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/dictionary/: dictionary.dart
example/lib/model/: constant.dart  language.dart  manager.dart  model.dart
example/lib/screens/: dictionary_manager.dart  model_manager.dart  translate.dart
example/lib/services/: download_service.dart  translation_service.dart
example/lib/utils/: logger.dart  permission_helper.dart  utils.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/: .gitignore
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig  Release.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: bergamot_translator.podspec
ios/Classes/: bergamot_translator.c  bergamot_translator.mm
lib/: bergamot_translator.dart  bergamot_translator_bindings_generated.dart
linux/: CMakeLists.txt
macos/: bergamot_translator.podspec
src/: CMakeLists.txt  bergamot_translator.c  bergamot_translator.cpp  bergamot_translator.h
src/cmake/: FindThreadsAndroid.cmake
windows/: CMakeLists.txt
